@@ -1,0 +1,1 @@
+function(){return new OpenLayers.Layer.Google('%s',{'type':google.maps.MapTypeId.TERRAIN,  numZoomLevels:20,'sphericalMercator':true});}
