@@ -1,0 +1,1 @@
+function(){return new OpenLayers.Layer.Yahoo('%s',{'type':YAHOO_MAP_HYB,'sphericalMercator':true});}
