@@ -4,7 +4,9 @@ Changelog
 0.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- changed map widgets jsfactory to provide a simple way to customize it
+- added z3c.autoinclude entry point
+- fixed layers query in maplayers
 
 
 0.1.3 (2011-02-20)
